--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
             <div class="author-img-container">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS4KhGSxD5zxuZe_8XuiImLPthFeOnjaSlf-Q&s" alt="author-img">
             </div>
+            <div class="author-info">
             <h3>Amy Burgess</h3>
             <p>Customer Manager,solution oy</p>
+            </div>
         </div>
         </div>
     </body>
